fix the logo wrapping issue

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -96,7 +96,7 @@ header {
 
   h1 {
     .logo {
-      display: inline-block;
+      display: inline;
       height: 4rem;
       padding: 0 0.2rem;
       vertical-align: middle;
@@ -104,7 +104,7 @@ header {
 
     a {
       color: rgba(255, 255, 255, 0.8);
-      display: inline-block;
+      display: inline;
 
       font-size: 3.2rem;
       font-weight: 400;
